ProBio.css
:root {
  --white: #ffffff;
  --gray1: #333333;
  --gray2: #555555;
  --gray3: #cccccc;
  --gray4: #aaaaaa;

  --black: #080808;
  --teal: #006060;
  --lightteal: #008080;
  --purple: #800080;
  --navy: #000080;
  --cyan: #17a2b8;
  --violetred: #c71585;
  --red: #ff0000;
  --orange: #ffa500;
  --green: #006400;
}

.back {
  background-color: var(--black);
}

.links {
  background-color: var(--cyan);
  color: var(--black);
  display: grid;
  font-size: 24px;
}

.route {
  color: var(--black);
  text-decoration: none;
  text-align: center;
  float: left;
  padding: 40px 0;
  background-color: var(--cyan);
  width: 250px;
  height: 100px;
}

.route:hover {
  background-color: var(--navy);
  color: var(--white);
}

.route:active {
  background-color: var(--black);
  color: var(--white);
}

.head {
  text-align: center;
}

.about {
  background-color: var(--lightteal);
  color: var(--black);
  display: grid;
  font-size: 24px;
}

.ProImg {
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 100%;
}

.output {
  text-align: left;
  margin-left: 20px;
  margin-right: 20px;
}

.previous {
  background-color: var(--cyan);
  color: var(--black);
  display: grid;
  font-size: 24px;
}

.projects {
  background-color: var(--lightteal);
  color: var(--black);
  display: grid;
  font-size: 24px;
}

.git {
  text-align: center;
  color: var(--black);
}

.contact {
  background-color: var(--cyan);
  color: var(--black);
  display: grid;
  font-size: 24px;
  height: 1078px;
}

.ContactForm {
  padding: 20px;
  width: 414px;
  height: 580px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 30px;
}

.start {
  text-align: center;
  margin-left: 30px;
  margin-right: 30px;
}

.TextInput {
  display: inline-block;
  margin-left: 70px;
  width: 250px;
}

.MessageInput {
  display: inline-block;
  margin-left: 127px;
  margin-top: -20px;
  width: 250px;
  height: 150px;
  resize: none;
}

.MessageLabel {
  display: inline-block;
  font-weight: bold;
  width: 100px;
  margin-top: 15px;
  margin-bottom: 0px;
  margin-right: -50px;
}

.label1 {
  display: inline-block;
  font-weight: bold;
  width: 100px;
  margin-top: 15px;
  margin-bottom: 15px;
  margin-right: -50px;
}

.label2 {
  font-weight: normal;
  text-decoration: none;
}

.label2::after {
  content: "\a";
  white-space: pre;
}

.label3 {
  display: inline-block;
  font-weight: bold;
  width: 100px;
  margin-top: 20px;
  margin-bottom: 15px;
  margin-right: -50px;
}

.field {
  margin: 0;
  border: 0;
  padding: 0;
}

.DateInput {
  display: inline-block;
  margin-left: 70px;
  width: 250px;
}

.RButton,
.SButton {
  background-color: var(--lightteal);
  border-color: none;
  color: var(--white);
  display: inline-block;
  width: 49%;
  height: 40px;
  margin-top: 30px;
}

.SButton:hover,
.RButton:hover {
  background-color: var(--navy);
}

.SButton:active,
.RButton:active {
  background-color: var(--black);
}

